Fix CSS alignment   - Center site content   - Remove 15px right margin

--- a/frontend/web/main.css
+++ b/frontend/web/main.css
@@ -11,3 +11,7 @@
 	user-select: none;
 	cursor: default;
 }
+
+.center {
+	text-align: center;
+}
